# libvivhook

./: .gitignore  Makefile.am  README.md  configure.ac  libvivhook.pc.in
src/: Makefile.am  elf_hook.c  flightrecorder.cpp  viv_hook.c  viv_hook.h  viv_interpose.c
